Added working api to save Orders

--- a/templates/list.html
+++ b/templates/list.html
@@ -118,9 +118,9 @@
       </div>
       <div class="modal-footer">
         <!--uncomment this to see the form data displayed.-->
-          <!--<pre>
+          <pre>
               {{ formData }}
-          </pre>-->
+          </pre>
       </div>
     </div>
     </div>
